--- a/config/database.yml
+++ b/config/database.yml
@@ -29,6 +29,16 @@ development:
   host: localhost
   port: 5432
 
+test:
+  <<: *default
+  database: my_api_test
+  username: max
+  password: 123
+  host: localhost
+  port: 5432
+
+
+
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
